refactor auth to new api
