# users/handler/user_handler.go
@@ -22,20 +22,23 @@ var errTokenInvalid = errors.New("token is invalid")
 func (h *UserHandler) GetUserInfo(w http.ResponseWriter, r *http.Request) {
 	cookie, err := r.Cookie("session_id")
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", errTokenInvalid.Error()))
+		body, _ := h.CreateErrorResponse(errTokenInvalid.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
 
 	tokenString := cookie.Value
 	user, err := h.usecase.GetUserInfo(tokenString)
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(err.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
 
-	response, err := h.CreateUserResponse("error", user)
+	response, err := h.CreateUserResponse(user)
 	if err != nil {
-		h.WriteResponse(w, http.StatusInternalServerError, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(err.Error())
+		h.WriteResponse(w, http.StatusInternalServerError, body)
 		return
 	}
 
@@ -45,82 +48,93 @@ func (h *UserHandler) GetUserInfo(w http.ResponseWriter, r *http.Request) {
 func (h *UserHandler) Login(w http.ResponseWriter, r *http.Request) {
 	user, err := h.ParseUserFromJsonBody(r)
 	if err != nil {
-		h.WriteResponse(w, http.StatusInternalServerError, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(errTokenInvalid.Error())
+		h.WriteResponse(w, http.StatusInternalServerError, body)
 		return
 	}
 
 	cookie, err := h.usecase.Login(user.Username, user.Password)
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(errTokenInvalid.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
 	http.SetCookie(w, cookie)
 
-	h.WriteResponse(w, http.StatusOK, h.CreateResponse("error", ""))
+	h.WriteResponse(w, http.StatusNoContent, nil)
 }
 
 func (h *UserHandler) CheckAuth(w http.ResponseWriter, r *http.Request) {
 	cookie, err := r.Cookie("session_id")
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", errTokenInvalid.Error()))
+		body, _ := h.CreateErrorResponse(errTokenInvalid.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
 
 	tokenString := cookie.Value
 	err = h.usecase.CheckAuth(tokenString)
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(err.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
 
-	h.WriteResponse(w, http.StatusOK, h.CreateResponse("error", ""))
+	h.WriteResponse(w, http.StatusNoContent, nil)
 }
 
 func (h *UserHandler) Signup(w http.ResponseWriter, r *http.Request) {
 	passlen := 8
 	user, err := h.ParseUserFromJsonBody(r)
 	if err != nil {
-		h.WriteResponse(w, http.StatusInternalServerError, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse("Password should be at least 8 characters long")
+		h.WriteResponse(w, http.StatusInternalServerError, body)
 		return
 	}
 
 	if len(user.Password) < passlen {
-		h.WriteResponse(w, http.StatusBadRequest, h.CreateResponse("error", "Password should be at least 8 characters long"))
+		body, _ := h.CreateErrorResponse("Password should be at least 8 characters long")
+		h.WriteResponse(w, http.StatusBadRequest, body)
 		return
 	}
 
 	if !h.usecase.IsValidPassword(user.Password) {
-		h.WriteResponse(w, http.StatusBadRequest, h.CreateResponse("error", "Password should contain letters, digits, and special characters"))
+		body, _ := h.CreateErrorResponse("Password should contain letters, digits, and special characters")
+		h.WriteResponse(w, http.StatusBadRequest, body)
 		return
 	}
 
 	if !h.usecase.IsValidEmail(user.Email) {
-		h.WriteResponse(w, http.StatusBadRequest, h.CreateResponse("error", "Email should contain @ and letters, digits, or special characters"))
+		body, _ := h.CreateErrorResponse("Email should contain @ and letters, digits, or special characters")
+		h.WriteResponse(w, http.StatusBadRequest, body)
 		return
 	}
 
 	err = h.usecase.Signup(user)
 	if err != nil {
-		h.WriteResponse(w, http.StatusUnauthorized, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(err.Error())
+		h.WriteResponse(w, http.StatusUnauthorized, body)
 		return
 	}
+
 	cookie, err := h.usecase.CreateSessionCookie(user.Username)
 	if err != nil {
-		h.WriteResponse(w, http.StatusInternalServerError, h.CreateResponse("error", err.Error()))
+		body, _ := h.CreateErrorResponse(err.Error())
+		h.WriteResponse(w, http.StatusInternalServerError, body)
 		return
 	}
 
 	http.SetCookie(w, cookie)
-	h.WriteResponse(w, http.StatusOK, h.CreateResponse("error", ""))
+	h.WriteResponse(w, http.StatusNoContent, nil)
 }
 
 func (h *UserHandler) Logout(w http.ResponseWriter, r *http.Request) {
-	expire := time.Now().Add(-7 * 24 * time.Hour)
 	_, err := r.Cookie("session_id")
 	if err != nil {
 		return
 	}
 
+	expire := time.Now().Add(-7 * 24 * time.Hour)
 	cookie := http.Cookie{
 		Name:    "session_id",
 		Value:   "value",
@@ -130,6 +144,9 @@ func (h *UserHandler) Logout(w http.ResponseWriter, r *http.Request) {
 }
 
 func (h *UserHandler) WriteResponse(w http.ResponseWriter, status int, body []byte) {
+	if body == nil {
+		return
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(status)
 	w.Write(body)
@@ -144,23 +161,16 @@ func (h *UserHandler) ParseUserFromJsonBody(r *http.Request) (*model.User, error
 	return &user, nil
 }
 
-func (h *UserHandler) CreateResponse(errorMsg string, errMessage string) []byte {
-	response := model.GetUserInfoResponse{Error: errorMsg, User: model.User{Username: errMessage}}
-	responseJson, err := json.Marshal(response)
-	if err != nil {
-		return nil
-	}
-	return responseJson
-}
-
-func (h *UserHandler) CreateUserResponse(errorMsg string, user *model.User) ([]byte, error) {
-	if user == nil {
-		user = &model.User{Username: ""}
-	}
-	response := model.GetUserInfoResponse{Error: errorMsg, User: *user}
+func (h *UserHandler) CreateErrorResponse(errorMsg string) ([]byte, error) {
+	response := model.ErrorResponse{Error: errorMsg}
 	responseJson, err := json.Marshal(response)
 	if err != nil {
 		return nil, err
 	}
-	return responseJson, nil
+	return responseJson, err
+}
+
+func (h *UserHandler) CreateUserResponse(user *model.User) ([]byte, error) {
+	responseJson, err := json.Marshal(user)
+	return responseJson, err
 }
